# virtual-usb-rs

./: Cargo.toml  Makefile  README.md
examples/steam_deck/: descriptor.rs  hid_report.rs  main.rs
examples/virtual_hid/: descriptor.rs  main.rs
src/: lib.rs  main.rs  usb.rs  usbip.rs  vhci_hcd.rs  virtual_usb.rs
src/usb/: cdc.rs  hid.rs
