[package]
name = "virtual-usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libudev = "0.3.0"
log = { version = "0.4.22", optional = true }
packed_struct = "0.10.1"
simple_logger = "5.0.0"
socketpair = "0.19.4"

[features]
log = ["dep:log"]
